# fastapi-demo

./: main.py  pyproject.toml
